// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoLink /> matches snapshot 1`] = `
Array [
  "This ",
  <LinkedText
    ids={
      Set {
        1,
      }
    }
    key="linked-text-1"
    text="Goat"
  />,
  " is here. It also has ",
  <LinkedText
    ids={
      Set {
        1,
        2,
      }
    }
    key="linked-text-2"
    text="Boat"
  />,
  "s galore.",
]
`;

exports[`<LinkedText /> matches snapshot 1`] = `"Link"`;

exports[`<LinkedText /> matches snapshot 2`] = `
<Link
  to="/note/1"
>
  Link
</Link>
`;

exports[`<LinkedText /> matches snapshot 3`] = `
<Link
  to="/disambiguation/1,2"
>
  Link
</Link>
`;
